<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PropertyApp</string>
    <string name="dialog_import_property_book">
        Select a .xls property book you downloaded from PBUSE
    </string>
    <string name="dialog_button_import">Import</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="start_import_fragment_button_text">Select a file to import.</string>
    <string name="import_welcome_text">
        Select an unmodified property book file from PBUSE saved as a .XLS file.
    </string>
    <string name="chooser_label">Pick File</string>
    <string name="pbic_select_button">Import PBICs</string>
    <string name="pbic_select_title">Select PBICs to import.</string>
    <string name="start_import_pb_title">Import a property book</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_nomenclature">Nomenclature: </string>
    <string name="label_sublin">Sub LIN: </string>
    <string name="label_required">Required: </string>
    <string name="label_authorized">Authorized: </string>
    <string name="label_di">Due In: </string>
    <string name="label_sri">SRI: </string>
    <string name="label_erc">ERC: </string>
    <string name="label_auth_doc">Authorizing Document: </string>
    <string name="search_label">Property Book Search</string>
    <string name="search_hint">LIN, NSN, Nomenclature, or SN</string>
    <string name="import_label">Import</string>
    <string name="no_search_result">No search results found for search: </string>
    <string name="lin">LIN</string>
    <string name="lin_label">LIN: </string>
    <string name="nsn">NSN</string>
    <string name="nsn_label">NSN: </string>
    <string name="nomenclature">Nomenclature</string>
    <string name="serial_number">Serial Number</string>
    <string name="property_book_value">Property Book Value</string>
    <string name="property_book_total_lins">Total LINs</string>
    <string name="property_book_total_items">Total Items</string>
    <string name="statistics">Statistics</string>
    <string name="lin_nomenclature_label">LIN Nomenclature: </string>
    <string name="nsn_nomenclature_label">NSN Nomenclature: </string>
    <string name="no_serial_numbers">No serial numbers for this NSN.</string>
    <string name="card_empty_cardwithlist_text">No NSNs for this LIN.</string>
    <string name="import_select_file_title">Select property book.</string>
    <string name="select_import_file">Select file</string>
    <string name="import_header">Import property book</string>
    <string name="wrong_file_type">Incorrect file type.</string>

    <!--Strings from WizardPager-->
    <string name="label_your_name">Name</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_email">Optional</string>
    <string name="review">Review</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Import</string>
    <string name="submit_confirm_message">Proceed with import?</string>
    <string name="error_reading_excel_file">Error reading excel file.</string>
    <!--End strings from WizardPager-->
</resources>