<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:text="@string/import_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PropertyApp.HeaderText"/>

    <Button
        android:text="@string/select_import_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_file_button"
        android:layout_margin="7dp"
        />

    <LinearLayout
        android:id="@+id/file_selected_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:id="@+id/filename_text"
            style="@style/PropertyApp.ImportFileName"/>
        <ImageView
            android:id="@+id/image_ok_file"
            style="@style/PropertyApp.RightSideIcon"
            android:src="@drawable/ic_action_navigation_accept"/>
    </LinearLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="wrong_file_type"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/pbic_select_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/import_processing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/import_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Importing data..."/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:text="@string/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"/>
        <Button
            android:id="@+id/import_button"
            android:text="@string/dialog_button_import"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"/>
    </LinearLayout>


</LinearLayout>