<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="A12345"
            android:id="@+id/lin"
            android:padding="14dp"
            android:textColor="@color/property_app_dark_green"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CONTAINER ISU 90"
                android:id="@+id/lin_nomenclature"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sub_lin"
                android:layout_gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sub LIN: A12345"
                android:id="@+id/sub_lin"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sub_lin"
                android:layout_gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin_card_expander">
        <TextView
            style="@style/lin_card_label"
            android:text="@string/label_authorized"
            android:id="@+id/lin_card_authorized"/>
        <TextView style="@style/lin_card_value"
                  android:id="@+id/lin_card_authorized_value"
                  android:layout_toRightOf="@+id/lin_card_authorized"
                  android:text="5"
            />
        <TextView
            style="@style/lin_card_label"
            android:id="@+id/lin_card_required_label"
            android:text="@string/label_required"
            android:layout_below="@+id/lin_card_authorized"
            />
        <TextView style="@style/lin_card_value"
            android:id="@+id/lin_card_required_value"
            android:layout_toRightOf="@+id/lin_card_authorized"
            android:layout_below="@+id/lin_card_authorized"
            android:text="5"
            />

        <TextView
            style="@style/lin_card_label"
            android:id="@+id/lin_card_sri_label"
            android:layout_toRightOf="@+id/lin_card_expand_auth_doc_label"
            android:text="@string/label_sri"/>
        <TextView style="@style/lin_card_value"
                  android:id="@+id/lin_card_sri_value"
                  android:layout_toRightOf="@+id/lin_card_sri_label"/>

        <TextView
            style="@style/lin_card_label"
            android:text="@string/label_erc"
            android:id="@+id/lin_card_erc_label"
            android:layout_below="@+id/lin_card_sri_label"
            android:layout_toRightOf="@+id/lin_card_expand_auth_doc_label"/>
        <TextView style="@style/lin_card_value"
                  android:id="@+id/lin_card_erc_value"
                  android:layout_toRightOf="@+id/lin_card_erc_label"
                  android:layout_below="@+id/lin_card_sri_label"
                  />

        <TextView
            style="@style/lin_card_label"
            android:text="@string/label_di"
            android:id="@+id/lin_card_due_in_label"
            android:layout_below="@+id/lin_card_required_label"/>
        <TextView style="@style/lin_card_value"
              android:id="@+id/lin_card_due_in_value"
              android:layout_below="@+id/lin_card_required_label"
            android:layout_toRightOf="@+id/lin_card_authorized"
            android:text="0"
            />

        <TextView
            style="@style/lin_card_label"
            android:text="@string/label_auth_doc"
            android:id="@+id/lin_card_expand_auth_doc_label"
            android:layout_below="@+id/lin_card_due_in_label"
            android:paddingBottom="15sp"/>
        <TextView style="@style/lin_card_value"
                  android:id="@+id/lin_card_auth_doc_value"
                  android:layout_below="@+id/lin_card_due_in_label"
                  android:layout_toRightOf="@+id/lin_card_expand_auth_doc_label"/>

    </RelativeLayout>
</LinearLayout>
